--- a/backend/backend/backend.csproj
+++ b/backend/backend/backend.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.13" />
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.13" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
