--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@microsoft/signalr": "^8.0.7",
     "axios": "^0.24.0",
     "jwt-decode": "^4.0.0",
+    "mobx-react-lite": "^4.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^5.4.0",
