--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@microsoft/signalr": "^8.0.7",
+    "apexcharts": "^4.5.0",
     "axios": "^0.24.0",
     "jwt-decode": "^4.0.0",
     "mobx-react-lite": "^4.1.0",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^17.0.2",
     "react-icons": "^5.4.0",
     "react-pro-sidebar": "^1.1.0",
